<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.dashboard.DashboardFragment">

     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:src="@drawable/logobrain"
         />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:textColor="@color/accent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/taskTittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Take my pill"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="@color/accent"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textSize="20sp" />

                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/when"
                    android:textColor="@color/accent"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="?attr/selectableItemBackground"
                    android:text="Set time"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <Button
                android:id="@+id/button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/accent"
                android:text="Done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>